Fix styling problems and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,10 @@ input,
 textarea,
 button,
 select,
+img,
 a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
 @layer base {
   a {
     @apply text-primary cursor-pointer relative inline-block;
